welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:13: error: Boolean does not take parameters
	    (a<20 && a>12)&&(b<20 && b>12)==false&&(c<20 && c>12)==false&&(d<20 && d>12)){
            ^